--- a/gehoortest.application-User.Interface/App.xaml
+++ b/gehoortest.application-User.Interface/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="gehoortest_application.User_Interface.App"
+﻿<Application x:Class="gehoortest.application_User.Interface.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:gehoortest_application.User_Interface"
+             xmlns:local="clr-namespace:gehoortest.application_User.Interface"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
