--- a/gehoortest.application-User.Interface/App.xaml
+++ b/gehoortest.application-User.Interface/App.xaml
@@ -1,9 +1,5 @@
 ﻿<Application x:Class="gehoortest.application_User.Interface.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:gehoortest.application_User.Interface" xmlns:sys="clr-namespace:System;assembly=System.Runtime"
-             StartupUri="MainWindow.xaml">
-    <Application.Resources>
-        <sys:String x:Key="connectionString">Server=localhost\SQLEXPRESS;Database=master;Trusted_Connection=True;</sys:String>
-    </Application.Resources>
-</Application>
+             xmlns:local="clr-namespace:gehoortest.application_User.Interface" xmlns:sys="clr-namespace:System;assembly=System.Runtime">
+ </Application>
