--- a/gehoortest.application-User.Interface/MainWindow.xaml
+++ b/gehoortest.application-User.Interface/MainWindow.xaml
@@ -3,12 +3,18 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:gehoortest.application_User.Interface"
+        xmlns:local="clr-namespace:gehoortest.application_User.Interface" 
+        d:DataContext="{d:DesignInstance Type=local:MainWindowViewModel}"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid Name="pnlMainGrid" Background="LightBlue">
-       
-        
+
+        <DataGrid
+            AutoGenerateColumns="True"
+            ItemsSource="{Binding TargetAudience}"
+             EnableRowVirtualization="True"
+            ></DataGrid>
+
         <Button Name="Jallooo" Content="Data!" HorizontalAlignment="Left" Margin="242,197,0,0" VerticalAlignment="Top" MouseUp="Jallooo_MouseUp"/>
         <TextBlock Name="Test" HorizontalAlignment="Left" Margin="442,155,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="104" Width="199"/>
 
