--- a/gehoortest.application-User.Interface/Views/MainWindow.xaml
+++ b/gehoortest.application-User.Interface/Views/MainWindow.xaml
@@ -1,10 +1,11 @@
-﻿<Window x:Class="gehoortest.application_User.Interface.MainWindow"
+﻿<Window x:Class="gehoortest.application_User.Interface.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:gehoortest.application_User.Interface" 
-        d:DataContext="{d:DesignInstance Type=local:MainWindowViewModel}"
+        xmlns:vm="clr-namespace:gehoortest.application_User.Interface.ViewModels"
+        d:DataContext="{d:DesignInstance Type=vm:MainWindowViewModel}"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid Name="pnlMainGrid" Background="LightBlue">
@@ -16,7 +17,7 @@
             EnableColumnVirtualization="True"
             ></DataGrid>
 
-        <Button Name="Jallooo" Content="Data!" HorizontalAlignment="Left" Margin="242,197,0,0" VerticalAlignment="Top" MouseUp="Jallooo_MouseUp"/>
+        <Button Name="Jallooo" Content="Data!" HorizontalAlignment="Left" Margin="242,197,0,0" VerticalAlignment="Top"/>
         <TextBlock Name="Test" HorizontalAlignment="Left" Margin="442,155,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="104" Width="199"/>
 
     </Grid>
