--- a/gehoortest.application-User.Interface/Views/Question.xaml
+++ b/gehoortest.application-User.Interface/Views/Question.xaml
@@ -21,14 +21,14 @@
                         <RowDefinition Height="1*"/>
                     </Grid.RowDefinitions>
 
-                    <TextBlock Grid.Row="0" Text="{Binding TextQuestion}" TextWrapping="WrapWithOverflow" VerticalAlignment="Center" FontSize="26" FontWeight="Bold"/>
+                    <TextBlock Style="{StaticResource Header}" Grid.Row="0" Text="{Binding TextQuestion}" VerticalAlignment="Center"/>
 
                     <StackPanel Grid.Row="1" Visibility="{Binding QuestionRadioButtons}">
                         <ListBox SelectedItem="{Binding SelectedOption}" FontSize="20" Height="200" ItemsSource="{Binding RadioButtons}"/>
                     </StackPanel>
 
                     <TextBox Visibility="{Binding QuestionInput}" Grid.Row="2" HorizontalAlignment="Left" TextWrapping="Wrap" Width="200" VerticalAlignment="Center" FontSize="20"/>
-                    <Button Grid.Row="3" Foreground="White" Content="Volgende vraag" Height="50" Width="200" HorizontalAlignment="Left" Background="#DA0063"  FontSize="20" Command="{Binding SaveQuestionCommand}"/>
+                    <Button Style="{StaticResource PrimaryButton}" Grid.Row="3" Content="Volgende vraag" Command="{Binding SaveQuestionCommand}"/>
                     
                 </Grid>
                 <Image Grid.Column="1" Source="/gehoortest.application-User.Interface;component/Images/test.png"></Image>
