centralize color definitions

--- a/gehoortest.application-User.Interface/App.xaml
+++ b/gehoortest.application-User.Interface/App.xaml
@@ -5,6 +5,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Styling/Colors.xaml"/>
                 <ResourceDictionary Source="Styling/TextStyles.xaml"/>
                 <ResourceDictionary Source="Styling/ButtonStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>
