--- a/gehoortest.application-User.Interface/Styling/ButtonStyle.xaml
+++ b/gehoortest.application-User.Interface/Styling/ButtonStyle.xaml
@@ -2,19 +2,19 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="PrimaryButton" TargetType="{x:Type Button}">
         <Setter Property="FontSize" Value="20"/>
-		<Setter Property="Background" Value="#DA0063"/>
-		<Setter Property="Foreground" Value="#FFF"/>
+		<Setter Property="Background" Value="{StaticResource PrimaryColor}"/>
+		<Setter Property="Foreground" Value="{StaticResource BackGroundColor}"/>
 		<Setter Property="Height" Value="50"/>
 		<Setter Property="Template">
 			<Setter.Value>
 				<ControlTemplate TargetType="{x:Type Button}">
-					<Border x:Name="Border" Background="{TemplateBinding Background}" BorderThickness="2" BorderBrush="#DA0063" CornerRadius="5">
+					<Border x:Name="Border" Background="{TemplateBinding Background}" BorderThickness="2" BorderBrush="{StaticResource PrimaryColor}" CornerRadius="5">
 						<ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
 					</Border>
 					<ControlTemplate.Triggers>
 						<Trigger Property="IsMouseOver" Value="True">
-							<Setter Property="Background" Value="White" TargetName="Border" />
-							<Setter TargetName="Border" Property="Button.Foreground" Value="#DA0063" />
+							<Setter Property="Background" Value="{StaticResource BackGroundColor}" TargetName="Border" />
+							<Setter TargetName="Border" Property="Button.Foreground" Value="{StaticResource PrimaryColor}" />
 						</Trigger>
 					</ControlTemplate.Triggers>
 				</ControlTemplate>
@@ -23,19 +23,19 @@
     </Style>
 	<Style x:Key="SecondaryButton" TargetType="{x:Type Button}">
 		<Setter Property="FontSize" Value="20"/>
-		<Setter Property="Background" Value="#FFF"/>
-		<Setter Property="Foreground" Value="#DA0063"/>
+		<Setter Property="Background" Value="{StaticResource BackGroundColor}"/>
+		<Setter Property="Foreground" Value="{StaticResource PrimaryColor}"/>
 		<Setter Property="Height" Value="50"/>
 		<Setter Property="Template">
 			<Setter.Value>
 				<ControlTemplate TargetType="{x:Type Button}">
-					<Border x:Name="Border" Background="{TemplateBinding Background}" BorderThickness="2" BorderBrush="#DA0063" CornerRadius="5">
+					<Border x:Name="Border" Background="{TemplateBinding Background}" BorderThickness="2" BorderBrush="{StaticResource PrimaryColor}" CornerRadius="5">
 						<ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
 					</Border>
 					<ControlTemplate.Triggers>
 						<Trigger Property="IsMouseOver" Value="True">
-							<Setter Property="Background" Value="#DA0063" TargetName="Border" />
-							<Setter TargetName="Border" Property="Button.Foreground" Value="#FFF" />
+							<Setter Property="Background" Value="{StaticResource PrimaryColor}" TargetName="Border" />
+							<Setter TargetName="Border" Property="Button.Foreground" Value="{StaticResource BackGroundColor}" />
 						</Trigger>
 					</ControlTemplate.Triggers>
 				</ControlTemplate>
