--- a/gehoortest.application-User.Interface/Styling/TextStyles.xaml
+++ b/gehoortest.application-User.Interface/Styling/TextStyles.xaml
@@ -3,19 +3,19 @@
     <Style x:Key="Header" TargetType="TextBlock">
         <Setter Property="FontSize" Value="26"/>
         <Setter Property="FontWeight" Value="Bold"/>
-        <Setter Property="Foreground" Value="Black"/>
+        <Setter Property="Foreground" Value="{StaticResource TextColor}"/>
 		<Setter Property="Margin" Value="5"/>
     </Style>
     <Style x:Key="SubHeader" TargetType="TextBlock">
         <Setter Property="FontSize" Value="22"/>
         <Setter Property="FontWeight" Value="SemiBold"/>
-        <Setter Property="Foreground" Value="#DA0063"/>
+        <Setter Property="Foreground" Value="{StaticResource PrimaryColor}"/>
 		<Setter Property="Margin" Value="5"/>
     </Style>
     <Style TargetType="TextBlock">
         <Setter Property="FontSize" Value="18"/>
         <Setter Property="FontStyle" Value="Normal"/>
-        <Setter Property="Foreground" Value="Black"/>
+        <Setter Property="Foreground" Value="{StaticResource TextColor}"/>
 		<Setter Property="TextWrapping" Value="WrapWithOverflow"/>
 		<Setter Property="Margin" Value="5"/>
     </Style>
