--- a/gehoortest.application-User.Interface/Styling/ButtonStyle.xaml
+++ b/gehoortest.application-User.Interface/Styling/ButtonStyle.xaml
@@ -1,10 +1,10 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 	<Style x:Key="PrimaryButton" TargetType="{x:Type Button}">
+		<Setter Property="Height" Value="50"/>
 		<Setter Property="FontSize" Value="20"/>
 		<Setter Property="Background" Value="{StaticResource BackGroundColor}"/>
 		<Setter Property="Foreground" Value="{StaticResource PrimaryColor}"/>
-		<Setter Property="Height" Value="50"/>
 		<Setter Property="Template">
 			<Setter.Value>
 				<ControlTemplate TargetType="{x:Type Button}">
@@ -14,18 +14,23 @@
 					<ControlTemplate.Triggers>
 						<Trigger Property="IsMouseOver" Value="True">
 							<Setter Property="Background" Value="{StaticResource PrimaryColor}" TargetName="Border" />
-							<Setter TargetName="Border" Property="Button.Foreground" Value="{StaticResource BackGroundColor}" />
-						</Trigger>
-					</ControlTemplate.Triggers>
+							<Setter Property="Foreground" Value="{StaticResource BackGroundColor}" />
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter Property="Background" Value="LightGray"/>
+                            <Setter Property="BorderBrush" Value="DarkSlateGray" TargetName="Border"/>
+                            <Setter Property="Foreground" Value="DarkSlateGray"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
 				</ControlTemplate>
 			</Setter.Value>
 		</Setter>
     </Style>
     <Style x:Key="SecondaryButton" TargetType="{x:Type Button}">
+        <Setter Property="Height" Value="50"/>
         <Setter Property="FontSize" Value="20"/>
         <Setter Property="Background" Value="{StaticResource PrimaryColor}"/>
         <Setter Property="Foreground" Value="{StaticResource BackGroundColor}"/>
-        <Setter Property="Height" Value="50"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
@@ -35,7 +40,12 @@
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
                             <Setter Property="Background" Value="{StaticResource BackGroundColor}" TargetName="Border" />
-                            <Setter TargetName="Border" Property="Button.Foreground" Value="{StaticResource PrimaryColor}" />
+                            <Setter Property="Foreground" Value="{StaticResource PrimaryColor}" />
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter Property="Background" Value="LightGray" TargetName="Border"/>
+                            <Setter Property="BorderBrush" Value="DarkSlateGray" TargetName="Border"/>
+                            <Setter Property="Foreground" Value="DarkSlateGray"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
