--- a/gehoortest.application-User.Interface/Styling/ButtonStyle.xaml
+++ b/gehoortest.application-User.Interface/Styling/ButtonStyle.xaml
@@ -1,9 +1,10 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-	<Style x:Key="PrimaryButton" TargetType="{x:Type Button}">
+    <Style x:Key="PrimaryButton" TargetType="{x:Type Button}">
 		<Setter Property="Height" Value="50"/>
-		<Setter Property="FontSize" Value="20"/>
-		<Setter Property="Background" Value="{StaticResource BackGroundColor}"/>
+        <Setter Property="FontSize" Value="20"/>
+        <Setter Property="Cursor" Value="Hand"/>
+        <Setter Property="Background" Value="{StaticResource BackGroundColor}"/>
 		<Setter Property="Foreground" Value="{StaticResource PrimaryColor}"/>
 		<Setter Property="Template">
 			<Setter.Value>
@@ -29,6 +30,7 @@
     <Style x:Key="SecondaryButton" TargetType="{x:Type Button}">
         <Setter Property="Height" Value="50"/>
         <Setter Property="FontSize" Value="20"/>
+        <Setter Property="Cursor" Value="Hand"/>
         <Setter Property="Background" Value="{StaticResource PrimaryColor}"/>
         <Setter Property="Foreground" Value="{StaticResource BackGroundColor}"/>
         <Setter Property="Template">
@@ -43,6 +45,7 @@
                             <Setter Property="Foreground" Value="{StaticResource PrimaryColor}" />
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="False">
+                            <Setter Property="Cursor" Value="Arrow"/>
                             <Setter Property="Background" Value="LightGray" TargetName="Border"/>
                             <Setter Property="BorderBrush" Value="DarkSlateGray" TargetName="Border"/>
                             <Setter Property="Foreground" Value="DarkSlateGray"/>
@@ -51,5 +54,30 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+    </Style>
+    <!--    Icon button styling. Usage:
+        <Button Style="{StaticResource IconButton}"> 
+            <Image Style="{StaticResource ButtonImage}" Source="{StaticResource **Icon name**}"/>
+        </Button>
+        All supported icons should be added to "Icons/icons.xaml"-->
+    <Style x:Key="IconButton" TargetType="{x:Type Button}">
+        <Setter Property="Height" Value="50"/>
+        <Setter Property="Width" Value="50"/>
+        <Setter Property="Cursor" Value="Hand"/>
+        <Setter Property="Background" Value="{StaticResource PrimaryColor}"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border x:Name="Border" Background="{TemplateBinding Background}" CornerRadius="30">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    <Style x:Key="ButtonImage" TargetType="{x:Type Image}">
+        <Setter Property="Height" Value="40"/>
+        <Setter Property="Width" Value="40"/>
+        <Setter Property="Cursor" Value="Hand"/>
     </Style>
 </ResourceDictionary>
