--- a/gehoortest.application-User.Interface/Views/Question.xaml
+++ b/gehoortest.application-User.Interface/Views/Question.xaml
@@ -18,7 +18,7 @@
                         <RowDefinition Height="1*"/>
                         <RowDefinition Height="3*"/>
                         <RowDefinition Height="2*"/>
-                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="60"/>
                     </Grid.RowDefinitions>
 
                     <TextBlock Style="{StaticResource Header}" Grid.Row="0" Text="{Binding TextQuestion}" VerticalAlignment="Center"/>
