--- a/gehoortest.application-User.Interface/Styling/ButtonStyle.xaml
+++ b/gehoortest.application-User.Interface/Styling/ButtonStyle.xaml
@@ -75,6 +75,21 @@
             </Setter.Value>
         </Setter>
     </Style>
+    <Style x:Key="PlayButton" TargetType="{x:Type Button}">
+        <Setter Property="Height" Value="100"/>
+        <Setter Property="Width" Value="100"/>
+        <Setter Property="Cursor" Value="Hand"/>
+        <Setter Property="Background" Value="{StaticResource PrimaryColor}"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border x:Name="Border" Background="{TemplateBinding Background}" CornerRadius="50">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
     <Style x:Key="ButtonImage" TargetType="{x:Type Image}">
         <Setter Property="Height" Value="30"/>
         <Setter Property="Width" Value="30"/>
