--- a/gehoortest.application-User.Interface/Styling/TextStyles.xaml
+++ b/gehoortest.application-User.Interface/Styling/TextStyles.xaml
@@ -17,4 +17,9 @@
         <Setter Property="TextWrapping" Value="WrapWithOverflow"/>
 		<Setter Property="Margin" Value="5"/>
     </Style>
+    <Style x:Key="TitleBarText" TargetType="TextBlock">
+        <Setter Property="FontSize" Value="26"/>
+        <Setter Property="FontWeight" Value="Normal"/>
+        <Setter Property="Margin" Value="5"/>
+    </Style>
 </ResourceDictionary>
