--- a/gehoortest.application-User.Interface/Views/AudiometryQuestion.xaml
+++ b/gehoortest.application-User.Interface/Views/AudiometryQuestion.xaml
@@ -21,8 +21,8 @@
                     </Grid.RowDefinitions>
 
                     <Grid Grid.Row="0" Background="LightGray">
-                        <Button Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" Width="80" Height="80" FontSize="20" Command="{Binding MakeSoundCommand}" Background="Transparent" BorderThickness="0">
-                            <Image Source="/gehoortest.application-User.Interface;component/Images/play.png" Width="70" Height="70"/>
+                        <Button Style="{StaticResource PlayButton}" Grid.Row="0" Command="{Binding MakeSoundCommand}">
+                            <Image Source="{StaticResource ic_play_white}" Margin="30,20,20,20"/>
                         </Button>
                     </Grid>
                     <TextBlock  Grid.Row="1" HorizontalAlignment="Center"  FontSize="26" >Druk op play om het geluid te herhalen.</TextBlock>
@@ -30,8 +30,8 @@
 
 
                 <TextBlock Grid.Row="1" HorizontalAlignment="Center" FontSize="32">Heeft u het geluid gehoord?</TextBlock>
-                <Button Grid.Row="1" Foreground="White" Content="Ja" Height="50" Width="200" HorizontalAlignment="Left" Background="#DA0063"  FontSize="20" Command="{Binding SaveAudioQuestionCommand}" CommandParameter="true"/>
-                <Button Grid.Row="1" Foreground="White" Content="Nee" Height="50" Width="200" HorizontalAlignment="Right" Background="#DA0063"  FontSize="20" Command="{Binding SaveAudioQuestionCommand}" CommandParameter="false"/>
+                <Button Grid.Row="1" Style="{StaticResource SecondaryButton}" Width="200" Content="Ja" HorizontalAlignment="Left" Command="{Binding SaveAudioQuestionCommand}" CommandParameter="true"/>
+                <Button Grid.Row="1" Style="{StaticResource SecondaryButton}" Width="200"  Content="Nee" HorizontalAlignment="Right" Command="{Binding SaveAudioQuestionCommand}" CommandParameter="false"/>
             </Grid>
         </Border>
     </Grid>
