--- a/gehoortest.application-User.Interface/Views/TestExplaination.xaml
+++ b/gehoortest.application-User.Interface/Views/TestExplaination.xaml
@@ -19,23 +19,23 @@
                         <RowDefinition Height="60"/>
                     </Grid.RowDefinitions>
                     <StackPanel Grid.Row="0">
-                    <TextBlock Style="{StaticResource Header}" Text="Uitleg van de gehoortest!"/>
-                    <TextBlock>
-                        U staat op het punt te beginnen aan de gehoortest. Deze gehoortest bestaat uit 2 onderdelen.
-                    </TextBlock>
+                        <TextBlock Style="{StaticResource Header}" Text="Uitleg van de gehoortest!"/>
+                        <TextBlock>
+                            U staat op het punt te beginnen aan de gehoortest. Deze gehoortest bestaat uit 2 onderdelen.
+                        </TextBlock>
                     
-                    <TextBlock Style="{StaticResource SubHeader}" Text="Levensstijl vragen"/>
-                    <TextBlock>
-                        Tijdens dit onderdeel worden er vragen gesteld over u en uw levensstijl.</TextBlock>
-					<TextBlock Style="{StaticResource SubHeader}" Text="Toonaudiometrie"/>
-                    <TextBlock>
-                        Tijdens dit onderdeel worden er verschillende tonen afgespeeld en moet u aangeven of u de toon hoort.
-                    </TextBlock>
-                    <TextBlock>
-                        Klik op start test als u klaar bent om te beginnen.
-                    </TextBlock>
-					</StackPanel>
-                    <Button Grid.Row="1" Style="{StaticResource PrimaryButton}" Content="Start test" Command="{Binding StartTestCommand}"/>
+                        <TextBlock Style="{StaticResource SubHeader}" Text="Levensstijl vragen"/>
+                        <TextBlock>
+                            Tijdens dit onderdeel worden er vragen gesteld over u en uw levensstijl.</TextBlock>
+					    <TextBlock Style="{StaticResource SubHeader}" Text="Toonaudiometrie"/>
+                        <TextBlock>
+                            Tijdens dit onderdeel worden er verschillende tonen afgespeeld en moet u aangeven of u de toon hoort.
+                        </TextBlock>
+                        <TextBlock>
+                            Klik op start test als u klaar bent om te beginnen.
+                        </TextBlock>
+                    </StackPanel>
+                    <Button Grid.Row="1" Margin="0,-20,0,0" Style="{StaticResource PrimaryButton}" Content="Start test" Command="{Binding StartTestCommand}"/>
 				</Grid>
                 <Image Grid.Column="1" Source="/gehoortest.application-User.Interface;component/Images/test.png"></Image>
             </Grid>
