--- a/gehoortest.application-User.Interface/App.xaml
+++ b/gehoortest.application-User.Interface/App.xaml
@@ -1,14 +1,14 @@
 ﻿<Application x:Class="gehoortest.application_User.Interface.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:gehoortest.application_User.Interface" xmlns:sys="clr-namespace:System;assembly=System.Runtime">
+             xmlns:local="clr-namespace:gehoortest.application_User.Interface">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Styling/Colors.xaml"/>
-                <ResourceDictionary Source="Styling/TextStyles.xaml"/>
-                <ResourceDictionary Source="Styling/ButtonStyle.xaml"/>
-                <ResourceDictionary Source="Icons/Icons.xaml"/>
+                <ResourceDictionary Source="Assets/Styling/Colors.xaml"/>
+                <ResourceDictionary Source="Assets/Styling/TextStyles.xaml"/>
+                <ResourceDictionary Source="Assets/Styling/ButtonStyle.xaml"/>
+                <ResourceDictionary Source="Assets/Icons/Icons.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
