--- a/gehoortest.application-User.Interface/Views/MainWindow.xaml
+++ b/gehoortest.application-User.Interface/Views/MainWindow.xaml
@@ -3,22 +3,45 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:gehoortest.application_User.Interface" 
-        xmlns:vm="clr-namespace:gehoortest.application_User.Interface.ViewModels"
-        d:DataContext="{d:DesignInstance Type=vm:MainWindowViewModel}"
+        xmlns:views="clr-namespace:gehoortest.application_User.Interface.Views" 
+        xmlns:viewModels="clr-namespace:gehoortest.application_User.Interface.ViewModels"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid Name="pnlMainGrid" Background="LightBlue">
+        Title="Gehoortest" Height="1080" Width="1920" WindowState="Maximized">
+    <!--WindowStyle="None"-->
 
-        <DataGrid
-            AutoGenerateColumns="True"
-            ItemsSource="{Binding TargetAudience}"
-             EnableRowVirtualization="True"
-            EnableColumnVirtualization="True"
-            ></DataGrid>
+    <Grid Background="lightgray">
+        <Grid.Resources>
+            <!-- Define all pages here -->
+            <DataTemplate DataType="{x:Type viewModels:StartTestViewModel}">
+                <views:StartTest />
+            </DataTemplate>
+            <DataTemplate DataType="{x:Type viewModels:TestResultViewModel}">
+                <views:TestResultView />
+            </DataTemplate>
+        </Grid.Resources>
 
-        <Button Name="Jallooo" Content="Data!" HorizontalAlignment="Left" Margin="242,197,0,0" VerticalAlignment="Top"/>
-        <TextBlock Name="Test" HorizontalAlignment="Left" Margin="442,155,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="104" Width="199"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="1450" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="100" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="650" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="100" />
+        </Grid.RowDefinitions>
+        
+        <Rectangle Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="0" Fill="White" />
 
+        <ContentControl Grid.Column="1" Grid.Row="2" Content="{Binding CurrentViewModel}" />
+
+        <Rectangle Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="4" Fill="White" />
+        
     </Grid>
+
+    <!--<Window.InputBindings>
+        <KeyBinding Modifiers="Alt" Key="F4" Command="{Binding}" />
+    </Window.InputBindings>-->
 </Window>
