--- a/gehoortest.application-User.Interface/Views/TestExplaination.xaml
+++ b/gehoortest.application-User.Interface/Views/TestExplaination.xaml
@@ -4,41 +4,45 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:gehoortest.application_User.Interface.Views"
-             mc:Ignorable="d" 
-             d:DesignHeight="1080" d:DesignWidth="1920">
-    <Grid>
-        <Border Grid.Column="1" BorderThickness="4" CornerRadius="10" BorderBrush="DarkGray" Margin="0,100" Padding="20" Background="white">
-            <Grid Background="white">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="5*"/>
-                    <ColumnDefinition Width="3*"/>
-                </Grid.ColumnDefinitions>
-                <Grid Grid.Column="0">
-                    <Grid.RowDefinitions >
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="60"/>
-                    </Grid.RowDefinitions>
-                    <StackPanel Grid.Row="0">
-                    <TextBlock Style="{StaticResource Header}" Text="Uitleg van de gehoortest!"/>
-                    <TextBlock>
-                        U staat op het punt te beginnen aan de gehoortest. Deze gehoortest bestaat uit 2 onderdelen.
-                    </TextBlock>
+             mc:Ignorable="d" Height="650" Width="1450">
+
+    <Border CornerRadius="40" Background="white" Padding="20">
+        <Border.Effect>
+            <DropShadowEffect BlurRadius="20" ShadowDepth="1"  Color="#dcdcdc"/>
+        </Border.Effect>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="5*"/>
+                <ColumnDefinition Width="3*"/>
+            </Grid.ColumnDefinitions>
+            
+            <Grid Grid.Column="0">
+                <Grid.RowDefinitions >
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="60"/>
+                </Grid.RowDefinitions>
+                
+                <StackPanel Grid.Row="0">
+                <TextBlock Style="{StaticResource Header}" Text="Uitleg van de gehoortest"/>
+                 <TextBlock>
+                    U staat op het punt te beginnen aan de gehoortest. Deze gehoortest bestaat uit 2 onderdelen.
+                </TextBlock>
                     
-                    <TextBlock Style="{StaticResource SubHeader}" Text="Levensstijl vragen"/>
-                    <TextBlock>
-                        Tijdens dit onderdeel worden er vragen gesteld over u en uw levensstijl.</TextBlock>
-					<TextBlock Style="{StaticResource SubHeader}" Text="Toonaudiometrie"/>
-                    <TextBlock>
-                        Tijdens dit onderdeel worden er verschillende tonen afgespeeld en moet u aangeven of u de toon hoort.
-                    </TextBlock>
-                    <TextBlock>
-                        Klik op start test als u klaar bent om te beginnen.
-                    </TextBlock>
-					</StackPanel>
-                    <Button Grid.Row="1" Style="{StaticResource PrimaryButton}" Content="Start test" Command="{Binding StartTestCommand}"/>
-				</Grid>
-                <Image Grid.Column="1" Source="/gehoortest.application-User.Interface;component/Images/test.png"></Image>
-            </Grid>
-        </Border>
-    </Grid>
+                <TextBlock Style="{StaticResource SubHeader}" Text="Levensstijl vragen" Margin="0 10 0 0"/>
+                <TextBlock>
+                    Tijdens dit onderdeel worden er vragen gesteld over u en uw levensstijl.</TextBlock>
+                    <TextBlock Style="{StaticResource SubHeader}" Text="Toonaudiometrie" Margin="0 10 0 0"/>
+                <TextBlock>
+                    Tijdens dit onderdeel worden er verschillende tonen afgespeeld en moet u aangeven of u de toon hoort.
+                </TextBlock>
+                    <TextBlock Margin="0 30 0 0">
+                     Klik op start test als u klaar bent om te beginnen.
+                </TextBlock>
+				</StackPanel>
+                <Button Grid.Row="1" Style="{StaticResource SecondaryButton}" Content="Start test" Command="{Binding StartTestCommand}"/>
+			</Grid>
+            
+            <Image Grid.Column="1" Source="/gehoortest.application-User.Interface;component/Assets/Images/test.png"></Image>
+        </Grid>
+    </Border>
 </UserControl>
