--- a/UserInterface/Views/MainWindow.xaml
+++ b/UserInterface/Views/MainWindow.xaml
@@ -18,6 +18,9 @@
             <DataTemplate DataType="{x:Type viewModels:TestResultViewModel}">
                 <views:TestResultView />
             </DataTemplate>
+            <DataTemplate DataType="{x:Type viewModels:TestOverviewViewModel}">
+                <views:TestOverviewView />
+            </DataTemplate>
         </Grid.Resources>
 
         <Grid.ColumnDefinitions>
