--- a/UserInterface/Assets/Styling/ComboBoxStyle.xaml
+++ b/UserInterface/Assets/Styling/ComboBoxStyle.xaml
@@ -1,15 +1,17 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+  
     <Style x:Key="ComboBoxStyle" TargetType="{x:Type ComboBox}">
-        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-
+        <Setter Property="HorizontalContentAlignment" Value="Left" />
+        <Setter Property="VerticalContentAlignment" Value="Center" />
+        <Setter Property="FontSize" Value="32" />
         <Setter Property="Background" Value="#EAEAEA" />
-        <Setter Property="Text" Value="20"/>
-        <!--<Setter Property="BorderBrush"  Value="{StaticResource PrimaryColor}" />-->
-        <!--<Setter Property="CornerRadius"  Value="5" />-->
-        <!--<Setter Property="BorderThickness" Value="4" />-->
-        <!--<Setter Property="Padding" Value="-3,-1,-3,0"/>-->
-        <!-- The padding is the most dirty solution there is but for some reason it has padding and i hate it.-->
-
+        
     </Style>
+
+
+
+
+    
+   
 </ResourceDictionary>
