--- a/UserInterface/Assets/Styling/ListViewStyle.xaml
+++ b/UserInterface/Assets/Styling/ListViewStyle.xaml
@@ -3,9 +3,7 @@
 
     <Style x:Key="ListViewStyle" TargetType="{x:Type ListView}">
         <!--<Setter Property="Background" Value="{StaticResource YourBackgroundColor}" />-->
-        <Setter Property="BorderBrush"  Value="{StaticResource PrimaryColor}" />
-        <!--<Setter Property="CornerRadius"  Value="5" />-->
-        <Setter Property="BorderThickness" Value="4" />
+        <Setter Property="BorderThickness" Value="0" />
         <Setter Property="Padding" Value="-3,-1,-3,0"/>
         <!-- The padding is the most dirty solution there is but for some reason it has padding and i hate it.-->
 
@@ -16,17 +14,22 @@
         <Setter Property="Background" Value="{StaticResource PrimaryColor}" />
         <Setter Property="Foreground" Value="White" />
         <Setter Property="BorderBrush" Value="{StaticResource PrimaryColor}" />
+        <Setter Property="HorizontalContentAlignment" Value="Left"/>
         <Setter Property="Margin" Value="0,0,0,0"/>
+        <Setter Property="Height" Value="62"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type GridViewColumnHeader}">
-                    <Border x:Name="HeaderBorder" BorderThickness="0" Background="{TemplateBinding Background}">
+                    <Border x:Name="HeaderBorder"  BorderThickness="0" Background="{TemplateBinding Background}">
                         <ContentPresenter
                             x:Name="HeaderContent"
                             HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                            VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                            VerticalAlignment="Center"
+                            Margin="0,-7,0,0" 
+                            
                             SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
                         />
+                        
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
